# splunkbaseconfs

apps/0-1k/27/1.20/imap/: README.txt  screenshot.jpg.txt
apps/0-1k/273/6.0.2/splunk_app_for_nix/: README.txt  app.manifest
apps/0-1k/282/2.3.0/encryptdecrypt/: README.txt
apps/0-1k/29/1.5/webping/: README.txt  vmware_1.9.tgz.txt
apps/0-1k/312/1.0.1/delimitedfields.1.0.1/: commands.conf  delimitedfields.README.txt  delimitedfields.py
apps/0-1k/316/4.1.7/amMap/: README.html
apps/0-1k/486/1.0/: minimalist-ui_10.css
apps/0-1k/511/1.0/: readme.txt  readrrd.sh
apps/0-1k/891/1.5/: web-watch_15.py
apps/0-1k/911/0.1/: README.txt
apps/1-2k/1606/3.1.2 MacOS (Big Sur 11.7 and Monterey)/: splunk-odbc_312-macos-big-sur-117-and-monterey.dmg.txt
apps/3-4k/3216/4.0.7/: splunk-ova-for-vmware_407.ova.txt
apps/4-5k/4760/1.1.3/: splunk-vmware-ova-for-itsi_113.ova.txt
apps/5-6k/5096/4.3.0/: splunk-ova-for-vmware-metrics_430.ova.txt
apps/8-9k/8260/1.2.3/TA-anyrun/: app.manifest  pyproject.toml  requirements.txt
apps/8-9k/8260/1.2.3/TA-anyrun/README/: inputs.conf.spec
apps/8-9k/8260/1.2.3/TA-anyrun/default/: app.conf  authorize.conf  collections.conf  inputs.conf  props.conf  restmap.conf  transforms.conf  web.conf  workflow_actions.conf
apps/8-9k/8260/1.2.3/TA-anyrun/default/data/ui/nav/: default.xml
apps/8-9k/8260/1.2.3/TA-anyrun/default/data/ui/views/: configuration.xml  feeds_info.xml  lookup.xml  lookup_info.xml  sandbox_e.xml  sandbox_info.xml
apps/8-9k/8260/1.2.3/TA-anyrun/static/: appIcon.png.txt  appIcon_2x.png.txt  appLogo.png.txt  appLogo_2x.png.txt
(+42448 files in other folders)
