[project]
name = "ta-anyrun"
version = "1.2.3"
description = "Splunk Enterprise connector for ANY.RUN"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.11.12",
    "anyrun-sdk==1.12.11",
    "async-timeout>=5.0.1",
    "dotenv>=0.9.9",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.10",
    "splunk-appinspect>=3.9.1",
    "splunk-sdk>=2.1.0",
    "requests>=2.32.3",
    "urllib3==1.26.19",
    # Pure-Python AES to avoid native module issues
    "pyaes>=1.6.1",
]

[tool.ruff]
line-length = 79 
fix = true

[tool.ruff.lint]
ignore = ["F401"]
extend-select = ["I"]
